--- a/test-nginx/nginx-deploy.yaml
+++ b/test-nginx/nginx-deploy.yaml
@@ -24,7 +24,7 @@ spec:
         app: nginx
     spec:
       containers:
-      - image: nginx
+      - image: nginx:1.24
         imagePullPolicy: Always
         name: nginx
         resources: {}
